helm.devops.nexus/nexus/docker-proxy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker-proxy
  namespace: nexus
spec:
  selector:
    app: sonatype-nexus
    release: nexus
  ports:
  - name: docker-proxy
    port: 5001
    protocol: TCP
    targetPort: 5001
